--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,6 @@
 <% layout('layouts/boilerplate') %>
+<link rel="stylesheet" href="/stylesheets/stars.css" />
+
 <body>
   <div class="row mt-3">
     <div class="col-6">
@@ -42,7 +44,7 @@
         novalidate
       >
         <div class="mb-3">
-          <label for="rating" class="form-label">Rate</label>
+          <!-- <label for="rating" class="form-label">Rate</label>
           <input
             type="range"
             name="review[rating]"
@@ -50,7 +52,46 @@
             min="1"
             max="5"
             id="rating"
-          />
+          /> -->
+          <fieldset class="starability-basic">
+            <legend>First rating:</legend>
+
+            <input
+              type="radio"
+              id="first-rate1"
+              name="review[rating]"
+              value="1"
+            />
+            <label for="first-rate1" title="Terrible">1 star</label>
+            <input
+              type="radio"
+              id="first-rate2"
+              name="review[rating]"
+              value="2"
+            />
+            <label for="first-rate2" title="Not good">2 stars</label>
+            <input
+              type="radio"
+              id="first-rate3"
+              name="review[rating]"
+              value="3"
+            />
+            <label for="first-rate3" title="Average">3 stars</label>
+            <input
+              type="radio"
+              id="first-rate4"
+              name="review[rating]"
+              value="4"
+            />
+            <label for="first-rate4" title="Very good">4 stars</label>
+            <input
+              type="radio"
+              id="first-rate5"
+              name="review[rating]"
+              value="5"
+            />
+            <label for="first-rate5" title="Amazing">5 stars</label>
+          </fieldset>
         </div>
         <div class="mb-3">
           <label for="body" class="form-label">Review</label>
@@ -67,12 +108,13 @@
       <div class="card mb-3">
         <div class="card-body">
           <h4 class="card-title" style="display: inline">
-            <%= review.rating %>
-          </h4>
-          <p style="display: inline">/ 5</p>
-          <h6 class="card-subtitle text-muted">
             <%= review.author.username %>
-          </h6>
+          </h4>
+
+          <p class="starability-result" data-rating="<%= review.rating %>">
+            Rated: <%= review.rating %> stars
+          </p>
+
           <p class="card-text"><%= review.body %></p>
           <% if ( currentUser && review.author.equals(currentUser._id)) {%>
           <form
