--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -40,7 +40,9 @@
           required
         />
       </div>
-      <input type="file" name="image" id="" multiple />
+      <div class="mb-3">
+        <input class="form-control" type="file" id="formFile" name="image" />
+      </div>
       <!-- <div class="mb-3">
         <input
           type="text"
@@ -61,6 +63,5 @@
       </div>
       <button class="btn btn-success offset-5">Create</button>
     </form>
-    <a href="/campgrounds">Back</a>
   </div>
 </div>
