--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,23 +1,40 @@
 <% layout('layouts/boilerplate') %>
 
-<h1>All Campgrounds</h1>
+<script>
+  const maptilerApiKey = "<%- process.env.MAPTILER_API_KEY %>";
+  const campgrounds ={features: <%- JSON.stringify(camps) %>};
+</script>
 
-<% for(let camp of camps){ %>
-<div class="card">
+<div
+  id="map"
+  style="width: 100%; height: 400px"
+  class="mt-3 border border-2 rounded"
+></div>
+<h1 class="m-3">All Campgrounds</h1>
+
+<div class="container">
   <div class="row">
-    <div class="col-md-4 mb-2">
-      <img src="<%= camp.image %>" alt="" class="img-fluid" />
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5><%= camp.title %></h5>
-        <p><%= camp.description %></p>
-        <p><%= camp.location %></p>
+    <% for(let camp of camps){ %>
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img
+          crossorigin="anonymous"
+          src="<%= camp.image[0].url %>"
+          alt=""
+          class="card-img-top img-fluid"
+        />
+        <div class="card-body">
+          <h5 class="card-title"><%= camp.title %></h5>
+          <p class="card-text"><%= camp.description %></p>
+          <p class="card-text"><%= camp.location %></p>
+          <a href="/campgrounds/<%= camp._id %>" class="btn btn-primary"
+            >View Campground</a
+          >
+        </div>
       </div>
-      <a href="/campgrounds/<%= camp._id %>"
-        ><button class="btn btn-primary">View Campground</button></a
-      >
     </div>
+    <% } %>
   </div>
 </div>
-<% } %>
+
+<script src="/javascripts/clusterMap.js"></script>
