--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,12 +1,22 @@
 <% layout('layouts/boilerplate') %>
 <link rel="stylesheet" href="/stylesheets/stars.css" />
 
+<script>
+  const maptilerApiKey = '<%- process.env.MAPTILER_API_KEY %>';
+  const campground = <%- JSON.stringify(campground) %>
+</script>
+
 <body>
   <div class="row mt-3">
     <div class="col-6">
       <div class="card mb-3">
         <% for (let img of campground.image) {%>
-        <img src="<%= img.url  %>" class="card-img-top" alt="..." />
+        <img
+          crossorigin="anonymous"
+          src="<%= img.url  %>"
+          class="card-img-top"
+          alt="..."
+        />
         <% } %>
         <div class="card-body">
           <h5 class="card-title"><%= campground.title %></h5>
@@ -38,6 +48,8 @@
       </div>
     </div>
     <div class="col-6">
+      <div id="map" style="width: 100%; height: 300px"></div>
+      <% if (currentUser) { %>
       <h2>Leave a Review</h2>
       <form
         action="/campgrounds/<%= campground._id %>/review"
@@ -45,7 +57,7 @@
         method="post"
         novalidate
       >
-        <div class="mb-3">
+        <div>
           <!-- <label for="rating" class="form-label">Rate</label>
           <input
             type="range"
@@ -56,8 +68,6 @@
             id="rating"
           /> -->
           <fieldset class="starability-basic">
-            <legend>First rating:</legend>
-
             <input
               type="radio"
               id="first-rate1"
@@ -131,5 +141,8 @@
       </div>
       <% } %>
     </div>
+    <%} %>
   </div>
 </body>
+
+<script src="/javascripts/showPageMap.js"></script>
